fix overlaping sections

--- a/style.css
+++ b/style.css
@@ -190,9 +190,6 @@ li {
 }
 
 /* ========== ABOUT ME ========== */
-#about {
-  height: 100vh;
-}
 .about-container h3 {
   color: var(--black);
   font-weight: 800;
@@ -518,6 +515,9 @@ ul.contact-text {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(4, 1fr);
   }
+  .tools-container {
+    column-gap: 1em;
+  }
   .tools-container img {
     width: 50px;
     padding: 1em 0;
@@ -526,6 +526,12 @@ ul.contact-text {
   .training-desc {
     padding: .5em 0;
     font-size: 1.2em;
+  }
+  .training-title:first-of-type {
+    border-radius: .5em .5em 0 0;
+  }
+  .training-title:last-of-type {
+    border-radius: 0;
   }
   .training-desc {
     grid-column: 1 / 1;
